[package]
name = "bc_indicators"
version = "0.2.2"
edition = "2024"

[dependencies]
bc_utils = {path = "../bc_utils"}
bc_utils_lg = {path = "../bc_utils_lg"}

num-traits = "^0.2.19"
rustc-hash = "1.1"

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "rsi"
path = "benches/ind/osc/other/rsi.rs"
harness = false

[[bench]]
name = "ema"
path = "benches/ind/no_osc/trend/ema.rs"
harness = false

[[bench]]
name = "gw_ind"
path = "benches/gw/ind.rs"
harness = false